# AI-Segmenter

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install_windows.py  installer_starten.bat  pyproject.toml  script.py  start_programm.bat
.github/workflows/: ci.yml
ai_segmenter/: __init__.py  __main__.py  app.py  app_icons.py  camera.py  config.py  decklink.py  image_utils.py  live_output.py  metrics.py  postprocessing.py  preview_renderer.py  profiler.py  runtime.py  utils.py  yolo_controls.py
ai_segmenter/models/: __init__.py  birefnet.py  corridorkey.py  factory.py  mediapipe_selfie.py  rvm.py  vitmatte.py  yolo.py
ai_segmenter/pipeline/: __init__.py  camera_lifecycle.py  live_pipeline.py
ai_segmenter/ui/: __init__.py  app_layout.py
docs/: ARCHITECTURE.md  MODELS.md  TESTPLAN.md
docs/images/: README.md
tests/: test_camera.py  test_image_utils.py  test_preview_renderer.py  test_profiler.py  test_yolo_controls.py
