[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-segmenter"
version = "0.1.0"
description = "Windows desktop application for live and post-production AI segmentation with camera, DeckLink, YOLO, BiRefNet, ViTMatte, RVM and CorridorKey support."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "David Augenstein" },
  { name = "Eva Zech" },
  { name = "Andrey Schäfer" },
]
keywords = [
  "segmentation",
  "matting",
  "video",
  "decklink",
  "yolo",
  "birefnet",
  "vitmatte",
  "customtkinter"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "customtkinter",
  "numpy",
  "pillow",
  "opencv-contrib-python",
  "imageio-ffmpeg",
  "mediapipe",
  "huggingface_hub",
  "comtypes; platform_system == 'Windows'",
]

[project.optional-dependencies]
models = [
  "torch",
  "torchvision",
  "transformers>=4.41,<5",
  "timm>=1.0,<1.1",
  "safetensors>=0.4,<1",
  "einops>=0.7,<1",
  "kornia>=0.7,<0.9",
  "ultralytics",
]
dev = [
  "pytest>=8",
]
tensorrt = [
  "torch-tensorrt",
  "tensorrt",
]

[project.scripts]
ai-segmenter = "ai_segmenter.__main__:main"

[project.urls]
Homepage = "https://github.com/Yerdnainspace/AI-Segmenter"
Repository = "https://github.com/Yerdnainspace/AI-Segmenter.git"
Issues = "https://github.com/Yerdnainspace/AI-Segmenter/issues"

[tool.setuptools.packages.find]
include = ["ai_segmenter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
